--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>
+    <!-- <noscript>
       To get started, edit <code>src/App.js</code> and save to reload.
-    </noscript>
+    </noscript> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
