--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
     <noscript>
       To get started, edit <code>src/App.js</code> and save to reload.
     </noscript>
-    <div id="root"></div>
+    <!-- <div id="root"></div> -->
+    <div id="root">I am Groot</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
